1.修改首页的样式 2.删除自带的一些demo函数 3.添加妹子ui框架 4.舍友又不搬走了
