# controllers/user.go
@@ -1,13 +1,12 @@
 package controllers
 
 import (
-	"github.com/ActingCute/NeteaseCloudMusicApi/models"
 	"encoding/json"
 	"strconv"
 	"github.com/astaxie/beego"
 )
 
-// Operations about Users
+// Operations about User
 type UserController struct {
 	baseController
 }
@@ -31,7 +30,7 @@ type phonelogin struct {
 //form.Set("limit", "1000")
 //form.Set("csrf_token", "")
 
-type Playlist struct {
+type UserData struct {
 	Uid        int64 `json:"uid"`
 	Offset     int `json:"offset"`
 	Limit      int `json:"limit"`
@@ -116,86 +115,6 @@ var (
 	UserInfo User
 )
 
-const clientToken = "1_jVUMqWEPke0/1/Vu56xCmJpo5vP1grjn_SOVVDzOc78w8OKLVZ2JH7IfkjSXqgfmh"
-
-// @Title CreateUser
-// @Description create users
-// @Param	body		body 	models.User	true		"body for user content"
-// @Success 200 {int} models.User.Id
-// @Failure 403 body is empty
-// @router / [post]
-func (u *UserController) Post() {
-	var user models.User
-	json.Unmarshal(u.Ctx.Input.RequestBody, &user)
-	uid := models.AddUser(user)
-	u.Data["json"] = map[string]string{"uid": uid}
-	u.ServeJSON()
-}
-
-// @Title GetAll
-// @Description get all Users
-// @Success 200 {object} models.User
-// @router / [get]
-func (u *UserController) GetAll() {
-	users := models.GetAllUsers()
-	u.Data["json"] = users
-	u.ServeJSON()
-}
-
-// @Title Get
-// @Description get user by uid
-// @Param	uid		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.User
-// @Failure 403 :uid is empty
-// @router /:uid [get]
-func (u *UserController) Get() {
-	uid := u.GetString(":uid")
-	if uid != "" {
-		user, err := models.GetUser(uid)
-		if err != nil {
-			u.Data["json"] = err.Error()
-		} else {
-			u.Data["json"] = user
-		}
-	}
-	u.ServeJSON()
-}
-
-// @Title Update
-// @Description update the user
-// @Param	uid		path 	string	true		"The uid you want to update"
-// @Param	body		body 	models.User	true		"body for user content"
-// @Success 200 {object} models.User
-// @Failure 403 :uid is not int
-// @router /:uid [put]
-func (u *UserController) Put() {
-	uid := u.GetString(":uid")
-	if uid != "" {
-		var user models.User
-		json.Unmarshal(u.Ctx.Input.RequestBody, &user)
-		uu, err := models.UpdateUser(uid, &user)
-		if err != nil {
-			u.Data["json"] = err.Error()
-		} else {
-			u.Data["json"] = uu
-		}
-	}
-	u.ServeJSON()
-}
-
-// @Title Delete
-// @Description delete the user
-// @Param	uid		path 	string	true		"The uid you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 uid is empty
-// @router /:uid [delete]
-func (u *UserController) Delete() {
-	uid := u.GetString(":uid")
-	models.DeleteUser(uid)
-	u.Data["json"] = "delete success!"
-	u.ServeJSON()
-}
-
 // @Title CellphoneLogin
 // @Description Logs user into the system
 // @Param	phone			query 	string	true		"The phone    for login"
@@ -208,6 +127,7 @@ func (u *UserController) Delete() {
 // @router /cellphonelogin [get]
 func (this *UserController) CellphoneLogin() {
 	if this.IsLogin() {
+		beego.Debug("be login")
 		this.SetReturnData(200, "login success", UserInfo)
 		return
 	}
@@ -216,7 +136,7 @@ func (this *UserController) CellphoneLogin() {
 	loginjson.Password = Md5(this.GetString("password"))
 	loginjson.Phone = this.GetString("phone")
 	loginjson.RememberLogin = true
-	loginjson.ClientToken = clientToken
+	loginjson.ClientToken = ClientToken
 	logindata, err := json.Marshal(loginjson)
 	if err != nil {
 		this.SetReturnData(500, "Program error", err)
@@ -240,28 +160,15 @@ func (this *UserController) CellphoneLogin() {
 	if !this.IsLogin() {
 		this.SetReturnData(200, "login fail", this.Ctx.Request.Cookies())
 	}
-	beego.Debug("Cookies===", this.Ctx.Request.Cookies())
-
-	//for _,c := range Cookies {
-	//	this.Ctx.Request.AddCookie(c)
-	//}
-
+	beego.Debug("Cookies===", Cookies)
 	this.SetReturnData(200, "login success", UserInfo)
-}
-
-// @Title logout
-// @Description Logs out current logged in user session
-// @Success 200 {string} logout success
-// @router /logout [get]
-func (u *UserController) Logout() {
-	u.Data["json"] = "logout success"
-	u.ServeJSON()
 }
 
 // @Title playlist
 // @Description get user playlist
 // @Success 200 {string} get playlist success
 // @router /playlist [get]
+// @Param uid query string true "The uid for user playlist"
 func (this *UserController) Playlist() {
 	this.NeedAPIinput("uid")
 	uid, _ := this.GetInt64("uid")
@@ -278,7 +185,7 @@ func (this *UserController) Playlist() {
 		return
 	}
 
-	var playlist Playlist
+	var playlist UserData
 	playlist.Uid = uid
 	playlist.Csrf_token = ""
 	playlist.Limit = 1000
@@ -295,6 +202,42 @@ func (this *UserController) Playlist() {
 		this.SetReturnData(500, "Program error", err)
 		return
 	}
-	SetCache(cname,string(body),600)
+	SetCache(cname, string(body), 600)
+	this.SetReturnData(200, "ok", string(body))
+}
+
+// @Title detail
+// @Description get user detail
+// @Success 200 {string} get user detail success
+// @router /detail [get]
+// @Param uid query string true "The uid for user detail"
+func (this *UserController)Detail() {
+	this.NeedAPIinput("uid")
+	uid, _ := this.GetInt64("uid")
+	if uid < 1 {
+		this.SetReturnData(500, "uid error", nil)
+		return
+	}
+	uidstr := this.GetString("uid")
+	cname := uidstr + "detail"
+	list := GetCache(cname)
+	beego.Debug(list)
+	if len(list) > 0 {
+		this.SetReturnData(200, "ok", list)
+		return
+	}
+	var detail UserData
+	detail.Csrf_token = ""
+	detaildata, err := json.Marshal(detail)
+	if err != nil {
+		this.SetReturnData(500, "Program error", err)
+		return
+	}
+	body, err := this.Http(BaseApi + Dir + DetailApi + "/" + uidstr, detaildata, "POST")
+	if err != nil {
+		this.SetReturnData(500, "Program error", err)
+		return
+	}
+	SetCache(cname, string(body), 600)
 	this.SetReturnData(200, "ok", string(body))
 }
